--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <i class="xi-naver"></i>
                 </a>
                 <a href="https://kakao.com" target="_blank">
-                    <i class="xi-kakaotlak"></i>
+                    <i class="xi-kakaotalk"></i>
                 </a>
             </div>
         </div>
